# test_task_ner

./: .gitignore  README.md  main.py  pyproject.toml  spiner.py
